`markdown` -> `main.js`
* Added minified version of main script.
* New title generator (h1, h2...h6) faithful to GitBook markdown.
* Added more respect for special characters within code blocks.
* Links to `.md` files are now auto replaced by` .html`
* Correction of spaces removed in code blocks after the equality symbol ( `=` )

--- a/en/coding/README.html
+++ b/en/coding/README.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Coding</title>
@@ -9,17 +9,17 @@
 </head>
 <body>
 
-[Data types](data-types.html)\
-[Variables](variables.html)\
-[Constants](loops.html)\
-[Arrays](arrays.html)\
-[Conditions](conditions.html)\
-[Loops](loops.html)\
-[Classes](classes.html)\
-[Keywords](keywords.html)\
-[Built-in Commands](built-in-commands.html)\
-[HEX..END](hex..end.html)\
-[Directives](directives.html)\
-[Comments](comments.html)
+[Data types](data-types.md)\
+[Variables](variables.md)\
+[Constants](loops.md)\
+[Arrays](arrays.md)\
+[Conditions](conditions.md)\
+[Loops](loops.md)\
+[Classes](classes.md)\
+[Keywords](keywords.md)\
+[Built-in Commands](built-in-commands.md)\
+[HEX..END](hex..end.md)\
+[Directives](directives.md)\
+[Comments](comments.md)
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
