--- a/en/coding/built-in-commands.html
+++ b/en/coding/built-in-commands.html
@@ -139,4 +139,4 @@ $rnd = random(1, $high)
 
 This function can be used for both integer and floating-point variables. The opcode is selected based on the type of the result variable (`$rnd` in this example).
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
