--- a/en/coding/constants.html
+++ b/en/coding/constants.html
@@ -67,4 +67,4 @@ To compile such expression, you must write the opcode, for example:
 
 Also there are some limitations with using an expression as the constant value.
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
