--- a/en/coding/data-types.html
+++ b/en/coding/data-types.html
@@ -121,4 +121,4 @@ Models defined in `.ide` files can be referenced by`#` followed by the model nam
 
 A hexadecimal number has to be within the `-80000000..7FFFFFFF` range.
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
