--- a/en/coding/directives.html
+++ b/en/coding/directives.html
@@ -153,4 +153,4 @@ Enables custom instructions set to the compiler. See [Extensions](../edit-modes/
 {$USE CLEO+}
 ```
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
