--- a/en/coding/hex..end.html
+++ b/en/coding/hex..end.html
@@ -16,11 +16,10 @@ Use this feature only if you know what you're doing. Any mistakes will corrupt t
 {% endhint %}
 
 ## Syntax
-```
-HEX
-    &lt;any hexadecimal numbers&gt;
-END
-```
+
+`HEX`\
+`    <any hexadecimal numbers>`\
+`END`
 
 ```sb3
 hex
@@ -124,4 +123,4 @@ end
 
 This example produces the following sequence of bytes: `E8 03 00 CB 5C FF`.
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
