--- a/en/coding/keywords.html
+++ b/en/coding/keywords.html
@@ -25,4 +25,4 @@ instead of
 
 The keywords list can be displayed by pressing Ctrl+Space.
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
