--- a/en/editor/README.html
+++ b/en/editor/README.html
@@ -9,24 +9,24 @@
 </head>
 <body>
 
-[Features](features.html)\
-[Options](options/README.html)
-- [General](options/general.html)
-- [Formats](options/formats.html)
-- [Editor](options/editor.html)
-- [Theme Editor](options/theme-editor.html)
-- [Hotkeys](options/hotkeys.html)
+[Features](features.md)\
+[Options](options/README.md)
+- [General](options/general.md)
+- [Formats](options/formats.md)
+- [Editor](options/editor.md)
+- [Theme Editor](options/theme-editor.md)
+- [Hotkeys](options/hotkeys.md)
 
-[Console](console.html)\
-[Hotkeys](hotkeys.html)\
-[Opcode Search Tool](opcode-search-tool.html)\
-[Command Line Interface](cli.html)\
-[Language Service](language-service.html)\
-[Edit Modes](edit-modes\README.html)
-- [CustomLabels.ini](edit-modes/customlabels.ini.html)
-- [Code Templates](edit-modes/code-templates.html)
-- [Enums.txt](edit-modes/enums.txt.html)
-- [Extensions](edit-modes/extensions.html)
-- [Opcodes List (SCM.INI)](edit-modes/opcodes-list-scm.ini.html)
+[Console](console.md)\
+[Hotkeys](hotkeys.md)\
+[Opcode Search Tool](opcode-search-tool.md)\
+[Command Line Interface](cli.md)\
+[Language Service](language-service.md)\
+[Edit Modes](edit-modes\README.md)
+- [CustomLabels.ini](edit-modes/customlabels.ini.md)
+- [Code Templates](edit-modes/code-templates.md)
+- [Enums.txt](edit-modes/enums.txt.md)
+- [Extensions](edit-modes/extensions.md)
+- [Opcodes List (SCM.INI)](edit-modes/opcodes-list-scm.ini.md)
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
