--- a/en/editor/console.html
+++ b/en/editor/console.html
@@ -133,8 +133,8 @@ The first `1` enables the `CODE_OFFSETS` option, the second `1` enables the `IGN
 
 Clicking the right-most button in the main toolbar shows a drop-down menu with the list of debug options.
 
-![](../../img/assets/sb-debug-options-dropdown.PNG)
+![](../../img/assets/sb-debug-options-dropdown.png)
 
 Each menu item toggles a particular debug option. The change comes into effect immediately.
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
