--- a/en/editor/edit-modes/README.html
+++ b/en/editor/edit-modes/README.html
@@ -268,4 +268,4 @@ To select the mode using CLI run Sanny Builder with the `--mode` [option](../edi
 .
 Running Sanny Builder with the `-x` [option](../editor/cli.md#x) allows loading the modes configuration from a file different from the default `modes.xml`. If Sanny Builder is already running, it reloads the configuration and updates the list of modes.
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
