--- a/en/editor/edit-modes/code-templates.html
+++ b/en/editor/edit-modes/code-templates.html
@@ -52,4 +52,4 @@ The option to save a template only for current mode becomes available if `modes.
 A template with the name `CLEO` unlocks the "New CLEO Script..." item in the main menu. The editor uses this template as the content for a newly created file.
 {% endhint %}
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
