--- a/en/editor/edit-modes/customlabels.ini.html
+++ b/en/editor/edit-modes/customlabels.ini.html
@@ -19,4 +19,4 @@ If the disassembler finds a label at the specified offset, this label gets the c
 
 To find out offset values enable the `CODE_OFFSETS` debug [option](../editor/console.md#code_offsets). After disassembling, a number in front of the script instruction is the offset value.
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
