--- a/en/editor/edit-modes/opcodes-list-scm.ini.html
+++ b/en/editor/edit-modes/opcodes-list-scm.ini.html
@@ -147,4 +147,4 @@ A letter following the index number indicates the parameter type.
 You can freely change parameters types, if needed.
 {% endhint %}
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
