--- a/en/editor/features.html
+++ b/en/editor/features.html
@@ -15,7 +15,7 @@ Sanny Builder provides the end-user the following features:
 
 Sanny Builder Library is a community-driven portal aiming to document all known scripting commands used in GTA III, Vice City and San Andreas. You can find it here: [library.sannybuilder.com](https://library.sannybuilder.com)
 
-Starting with v3.8.0 Sanny Builder uses library's files to provide brief descriptions to all opcodes directly in the IDE complimentary to the [Show opcode info](#Displaying Information about Opcode) feature. Those files are controlled with the new `&lt;library&gt;` parameter in the [edit mode configuration](../edit-modes/README.html#library).
+Starting with v3.8.0 Sanny Builder uses library's files to provide brief descriptions to all opcodes directly in the IDE complimentary to the [Show opcode info](#Displaying Information about Opcode) feature. Those files are controlled with the new `&lt;library&gt;` parameter in the [edit mode configuration](../edit-modes/README.md#library).
 
 Double-clicking the opcode description in the status bar opens the library's page with this opcode's full description in the browser.
 
@@ -27,7 +27,7 @@ Clicking the library version text in the status bar brings up a popup menu from 
 
 ## Color Themes
 
-Sanny Builder's look and feel can be customized with themes. They define colors and style of the interface and code elements for easier reading. The active color theme can be changed in the [options](options/editor.html#color-theme). 
+Sanny Builder's look and feel can be customized with themes. They define colors and style of the interface and code elements for easier reading. The active color theme can be changed in the [options](options/editor.md#color-theme). 
 
 <div class="info">
 If you launch Sanny Builder v3.8.0 with `settings.ini` from a prior version, your syntax highlighting configuration will be converted to a custom user theme (stored in`themes\custom.ini`).
@@ -154,4 +154,4 @@ Sanny Builder is able to check if a new version is available. To use this featur
 
 The editor can also check for an update during startup if you enable this option in the updater window.
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
