--- a/en/editor/hotkeys.html
+++ b/en/editor/hotkeys.html
@@ -41,7 +41,7 @@ Sanny Builder supports many common shortcuts for the file and text operations (`
 </tr>
 <tr>
 <td> `F10`</td>
-<td>open the [options](options/README.html) window</td>
+<td>open the [options](options/README.md) window</td>
 </tr>
 <tr>
 <td> `F12`</td>
@@ -199,4 +199,4 @@ Sanny Builder supports many common shortcuts for the file and text operations (`
 </table>
 
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
