--- a/en/editor/language-service.html
+++ b/en/editor/language-service.html
@@ -39,4 +39,4 @@ Read more technical details on the service implementation there:
 * [Notes on constants highlighting. Part 2/2](https://www.patreon.com/posts/46873773)
 {% endhint %}
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
