--- a/en/editor/opcode-search-tool.html
+++ b/en/editor/opcode-search-tool.html
@@ -118,4 +118,4 @@ Finds opcodes with `player`, with the exception of the conditional opcodes with 
 
 Finds opcodes where `@` `=` `@` follow each other (possibly with other words in between).
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
