--- a/en/editor/options/README.html
+++ b/en/editor/options/README.html
@@ -11,4 +11,4 @@
 
 The options window is shown when you press `F10`. This window is divided into five tabs, each of them contains certain kind of settings. By default the [general settings](general.md) tab is open.
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
