--- a/en/editor/options/editor.html
+++ b/en/editor/options/editor.html
@@ -17,7 +17,7 @@ Here you can change the IDE settings.
 
 ![](../../../img/assets/sb-options-color-theme.png)
 
-This picker allows to choose one of the pre-defined themes to customize interface colors and syntax highlighting. The Edit button launches [Theme Editor](theme-editor.html).
+This picker allows to choose one of the pre-defined themes to customize interface colors and syntax highlighting. The Edit button launches [Theme Editor](theme-editor.md).
 
 ## Code Scan Distance
 
@@ -47,4 +47,4 @@ Here you can choose the font and configure its display. Sanny Builder supports o
 `Enable language service` - toggle the [language service](../language-service.md). Disabling this service also makes the semantinc contants highlighting unavailable. Does not affect a document that is already opened in the editor\
 `Semantic highlighting` - apply the same rules to constants as to their values. The color theme's rules for constant highlighting will be ignored.
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
