--- a/en/editor/options/formats.html
+++ b/en/editor/options/formats.html
@@ -73,4 +73,4 @@ The file `CustomArrays.ini` contains names of the arrays in the following syntax
 
 This option serves a dual purpose. The disassembler names [global variables](../../coding/variables.md#global-variables), [labels](../../coding/data-types.md#labels), [arrays](../../coding/arrays.md) using the selected letter case. The compiler writes [string literals](../../coding/data-types.md#string-literals) using the selected case too.
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
