--- a/en/editor/options/general.html
+++ b/en/editor/options/general.html
@@ -102,4 +102,4 @@ The file compiled with the extra information can not be open in Sanny Builder pr
 Starting from v3.8.0 the disassembler can [ignore extra information](../console.md#skip_extra_info).
 {% endhint %}
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
