--- a/en/editor/options/theme-editor.html
+++ b/en/editor/options/theme-editor.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-Theme Editor is a new built-in tool that replaces syntax highlighting options. It can be launched from the [Editor](editor.html#color-theme) tab.
+Theme Editor is a new built-in tool that replaces syntax highlighting options. It can be launched from the [Editor](editor.md#color-theme) tab.
 
 ![](../../../img/assets/theme-editor-en.png)
 
@@ -45,4 +45,4 @@ Available `style` elements are: **B** – bold, **I** – italic, **U** – unde
 The highlighting configuration is also used when the code source is saved into the `RTF` or `HTML` formats.
 </div>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
