--- a/en/scm-documentation/README.html
+++ b/en/scm-documentation/README.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
   <title>SCM Documentation</title>
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-[GTA Limits](gta-limits.html)\
-[GTA III](gta3\README.html)\
-[GTA SA](sa\README.html)\
-[GTA VC](vc\README.html)\
-[GTA VCS](vcs\README.html)\
-[GTA LCS](lcs\README.html)
+[GTA Limits](gta-limits.md)\
+[GTA III](gta3\README.md)\
+[GTA SA](sa\README.md)\
+[GTA VC](vc\README.md)\
+[GTA VCS](vcs\README.md)\
+[GTA LCS](lcs\README.md)
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
