--- a/en/scm-documentation/gta-limits.html
+++ b/en/scm-documentation/gta-limits.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
   <title>GTA Limits</title>
@@ -9,7 +9,6 @@
 </head>
 <body>
 ---
-
 <table>
 <thead>
 <tr>
@@ -201,4 +200,4 @@
 Originally posted by CyQ on [GTAForums.com](http://www.gtaforums.com/index.php?showtopic=213017\&view=findpost\&p=3145932)
 {% endhint %}
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
