--- a/en/scm-documentation/sa/README.html
+++ b/en/scm-documentation/sa/README.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>San Andreas</title>
@@ -11,4 +11,4 @@
 
 
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
