--- a/en/scm-documentation/sa/buttons.html
+++ b/en/scm-documentation/sa/buttons.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Button IDs</title>
@@ -148,4 +148,4 @@
 
 [https://gtamods.com/wiki/00E1](https://gtamods.com/wiki/00E1)
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
