--- a/en/scm-documentation/sa/clothes.html
+++ b/en/scm-documentation/sa/clothes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Player Clothes</title>
@@ -1681,4 +1681,4 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
