--- a/en/scm-documentation/sa/garages.html
+++ b/en/scm-documentation/sa/garages.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Garage IDs</title>
@@ -361,4 +361,4 @@ Garage.Activate('BODLAWN')
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
