--- a/en/scm-documentation/sa/particles.html
+++ b/en/scm-documentation/sa/particles.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Particle Effects</title>
@@ -18,326 +18,326 @@
 </thead>
 <tbody>
 <tr>
-<td>&quot;blood_heli&quot;</td>
+<td>"blood_heli"</td>
 <td>bloody explosion</td>
 </tr>
 <tr>
-<td>&quot;boat_prop&quot;</td>
+<td>"boat_prop"</td>
 <td>a surf</td>
 </tr>
 <tr>
-<td>&quot;camflash&quot;</td>
+<td>"camflash"</td>
 <td>small flare</td>
 </tr>
 <tr>
-<td>&quot;carwashspray&quot;</td>
+<td>"carwashspray"</td>
 <td>steam, as on a carwash</td>
 </tr>
 <tr>
-<td>&quot;cement&quot;</td>
+<td>"cement"</td>
 <td>cement</td>
 </tr>
 <tr>
-<td>&quot;cloudfast&quot;</td>
+<td>"cloudfast"</td>
 <td>fast clouds</td>
 </tr>
 <tr>
-<td>&quot;coke_puff&quot;</td>
+<td>"coke_puff"</td>
 <td>puff of a coke</td>
 </tr>
 <tr>
-<td>&quot;coke_trail&quot;</td>
+<td>"coke_trail"</td>
 <td>a pouring water</td>
 </tr>
 <tr>
-<td>&quot;cigarette_smoke&quot;</td>
+<td>"cigarette_smoke"</td>
 <td>a smoke from a cigarette</td>
 </tr>
 <tr>
-<td>&quot;explosion_barrel&quot;</td>
+<td>"explosion_barrel"</td>
 <td>explosion and splinters of a box</td>
 </tr>
 <tr>
-<td>&quot;explosion_crate&quot;</td>
+<td>"explosion_crate"</td>
 <td>explosion and splinters of the large box</td>
 </tr>
 <tr>
-<td>&quot;explosion_door&quot;</td>
+<td>"explosion_door"</td>
 <td>a smoke with sparks</td>
 </tr>
 <tr>
-<td>&quot;exhale&quot;</td>
+<td>"exhale"</td>
 <td>a small smoke</td>
 </tr>
 <tr>
-<td>&quot;explosion_fuel_car&quot;</td>
+<td>"explosion_fuel_car"</td>
 <td>explosion, as from the machine</td>
 </tr>
 <tr>
-<td>&quot;explosion_large&quot;</td>
+<td>"explosion_large"</td>
 <td>the large explosion</td>
 </tr>
 <tr>
-<td>&quot;explosion_medium&quot;</td>
+<td>"explosion_medium"</td>
 <td>average explosion</td>
 </tr>
 <tr>
-<td>&quot;explosion_molotov&quot;</td>
+<td>"explosion_molotov"</td>
 <td>explosion, as from a movotov cocktail</td>
 </tr>
 <tr>
-<td>&quot;explosion_small&quot;</td>
+<td>"explosion_small"</td>
 <td>small explosion</td>
 </tr>
 <tr>
-<td>&quot;explosion_tiny&quot;</td>
+<td>"explosion_tiny"</td>
 <td>very small explosion</td>
 </tr>
 <tr>
-<td>&quot;extinguisher&quot;</td>
+<td>"extinguisher"</td>
 <td>foam of the fire extinguisher</td>
 </tr>
 <tr>
-<td>&quot;flame&quot;</td>
+<td>"flame"</td>
 <td>small fire</td>
 </tr>
 <tr>
-<td>&quot;fire&quot;</td>
+<td>"fire"</td>
 <td>fire</td>
 </tr>
 <tr>
-<td>&quot;fire_med&quot;</td>
+<td>"fire_med"</td>
 <td>average fire</td>
 </tr>
 <tr>
-<td>&quot;fire_large&quot;</td>
+<td>"fire_large"</td>
 <td>large fire</td>
 </tr>
 <tr>
-<td>&quot;flamethrower&quot;</td>
+<td>"flamethrower"</td>
 <td>fire of the flamethrower</td>
 </tr>
 <tr>
-<td>&quot;fire_bike&quot;</td>
+<td>"fire_bike"</td>
 <td>fire, as from a burning motorcycle</td>
 </tr>
 <tr>
-<td>&quot;fire_car&quot;</td>
+<td>"fire_car"</td>
 <td>fire, as from the burning machine</td>
 </tr>
 <tr>
-<td>&quot;gunflash&quot;</td>
+<td>"gunflash"</td>
 <td>as the bullet from a trunk takes off</td>
 </tr>
 <tr>
-<td>&quot;gunsmoke&quot;</td>
+<td>"gunsmoke"</td>
 <td>a smoke from a gun</td>
 </tr>
 <tr>
-<td>&quot;insects&quot;</td>
+<td>"insects"</td>
 <td>insects</td>
 </tr>
 <tr>
-<td>&quot;heli_dust&quot;</td>
+<td>"heli_dust"</td>
 <td>a dust, as from the helicopter</td>
 </tr>
 <tr>
-<td>&quot;jetpack&quot;</td>
+<td>"jetpack"</td>
 <td>a jetpack&#39;s fire</td>
 </tr>
 <tr>
-<td>&quot;jetthrust&quot;</td>
+<td>"jetthrust"</td>
 <td>fire from the muffler of the machine, as during use of nitrogen</td>
 </tr>
 <tr>
-<td>&quot;nitro&quot;</td>
+<td>"nitro"</td>
 <td>nitro</td>
 </tr>
 <tr>
-<td>&quot;molotov_flame&quot;</td>
+<td>"molotov_flame"</td>
 <td>fire from a Molotov Cocktail</td>
 </tr>
 <tr>
-<td>&quot;overheat_car&quot;</td>
+<td>"overheat_car"</td>
 <td>smoke from damaged car</td>
 </tr>
 <tr>
-<td>&quot;overheat_car_electric&quot;</td>
+<td>"overheat_car_electric"</td>
 <td>wrecked electro-machine</td>
 </tr>
 <tr>
-<td>&quot;prt_boatsplash&quot;</td>
+<td>"prt_boatsplash"</td>
 <td>foam</td>
 </tr>
 <tr>
-<td>&quot;prt_cardebris&quot;</td>
+<td>"prt_cardebris"</td>
 <td>splinters from a box</td>
 </tr>
 <tr>
-<td>&quot;prt_collisionsmoke&quot;</td>
+<td>"prt_collisionsmoke"</td>
 <td>a dense white smoke</td>
 </tr>
 <tr>
-<td>&quot;prt_glass&quot;</td>
+<td>"prt_glass"</td>
 <td>a crashing glass</td>
 </tr>
 <tr>
-<td>&quot;prt_gunshell&quot;</td>
+<td>"prt_gunshell"</td>
 <td>shells</td>
 </tr>
 <tr>
-<td>&quot;prt_sand&quot;</td>
+<td>"prt_sand"</td>
 <td>sand, which was scattered</td>
 </tr>
 <tr>
-<td>&quot;prt_sand2&quot;</td>
+<td>"prt_sand2"</td>
 <td>there is less sand, than in previous animation</td>
 </tr>
 <tr>
-<td>&quot;prt_smokeII_3_expand&quot;</td>
+<td>"prt_smokeII_3_expand"</td>
 <td>- a grey smoke</td>
 </tr>
 <tr>
-<td>&quot;prt_smoke_huge&quot;</td>
+<td>"prt_smoke_huge"</td>
 <td>there is a lot of grey smoke</td>
 </tr>
 <tr>
-<td>&quot;prt_spark&quot;</td>
+<td>"prt_spark"</td>
 <td>of a spark</td>
 </tr>
 <tr>
-<td>&quot;prt_spark_2&quot;</td>
+<td>"prt_spark_2"</td>
 <td>the large sparks</td>
 </tr>
 <tr>
-<td>&quot;prt_splash&quot;</td>
+<td>"prt_splash"</td>
 <td>burst</td>
 </tr>
 <tr>
-<td>&quot;prt_wake&quot;</td>
+<td>"prt_wake"</td>
 <td>a wave</td>
 </tr>
 <tr>
-<td>&quot;prt_watersplash&quot;</td>
+<td>"prt_watersplash"</td>
 <td>sparks</td>
 </tr>
 <tr>
-<td>&quot;prt_wheeldirt&quot;</td>
+<td>"prt_wheeldirt"</td>
 <td>sparks from wheels of the car</td>
 </tr>
 <tr>
-<td>&quot;petrolcan&quot;</td>
+<td>"petrolcan"</td>
 <td>a jet</td>
 </tr>
 <tr>
-<td>&quot;puke&quot;</td>
+<td>"puke"</td>
 <td>belch</td>
 </tr>
 <tr>
-<td>&quot;riot_smoke&quot;</td>
+<td>"riot_smoke"</td>
 <td>there is a lot of smoke</td>
 </tr>
 <tr>
-<td>&quot;spraycan&quot;</td>
+<td>"spraycan"</td>
 <td>spray</td>
 </tr>
 <tr>
-<td>&quot;smoke30lit&quot;</td>
+<td>"smoke30lit"</td>
 <td>a smoke</td>
 </tr>
 <tr>
-<td>&quot;smoke30m&quot;</td>
+<td>"smoke30m"</td>
 <td>a rich smoke</td>
 </tr>
 <tr>
-<td>&quot;smoke50lit&quot;</td>
+<td>"smoke50lit"</td>
 <td>more richer smoke</td>
 </tr>
 <tr>
-<td>&quot;shootlight&quot;</td>
+<td>"shootlight"</td>
 <td>fireworks</td>
 </tr>
 <tr>
-<td>&quot;smoke_flare&quot;</td>
+<td>"smoke_flare"</td>
 <td>fireworks</td>
 </tr>
 <tr>
-<td>&quot;tank_fire&quot;</td>
+<td>"tank_fire"</td>
 <td>a shot from the tank</td>
 </tr>
 <tr>
-<td>&quot;teargas&quot;</td>
+<td>"teargas"</td>
 <td>gas, as from gas grenade</td>
 </tr>
 <tr>
-<td>&quot;teargasAD&quot;</td>
+<td>"teargasAD"</td>
 <td>gas, as from small gas grenade</td>
 </tr>
 <tr>
-<td>&quot;tree_hit_fir&quot;</td>
+<td>"tree_hit_fir"</td>
 <td>leaf falling</td>
 </tr>
 <tr>
-<td>&quot;tree_hit_palm&quot;</td>
+<td>"tree_hit_palm"</td>
 <td>falling of pair large leafs</td>
 </tr>
 <tr>
-<td>&quot;vent&quot;</td>
+<td>"vent"</td>
 <td>slowly dissipating a smoke</td>
 </tr>
 <tr>
-<td>&quot;vent2&quot;</td>
+<td>"vent2"</td>
 <td>practically too most</td>
 </tr>
 <tr>
-<td>&quot;water_hydrant&quot;</td>
+<td>"water_hydrant"</td>
 <td>the large flow of water</td>
 </tr>
 <tr>
-<td>&quot;water_ripples&quot;</td>
+<td>"water_ripples"</td>
 <td>circles on water</td>
 </tr>
 <tr>
-<td>&quot;water_speed&quot;</td>
+<td>"water_speed"</td>
 <td>the large sparks from water</td>
 </tr>
 <tr>
-<td>&quot;water_splash&quot;</td>
+<td>"water_splash"</td>
 <td>small sparks from water</td>
 </tr>
 <tr>
-<td>&quot;water_splash_big&quot;</td>
+<td>"water_splash_big"</td>
 <td>average sparks</td>
 </tr>
 <tr>
-<td>&quot;water_splsh_sml&quot;</td>
+<td>"water_splsh_sml"</td>
 <td>sparks, only them it is not visible almost</td>
 </tr>
 <tr>
-<td>&quot;water_swim&quot;</td>
+<td>"water_swim"</td>
 <td>small sparks at navigation</td>
 </tr>
 <tr>
-<td>&quot;waterfall_end&quot;</td>
+<td>"waterfall_end"</td>
 <td>there is a lot of pair</td>
 </tr>
 <tr>
-<td>&quot;water_fnt_tme&quot;</td>
+<td>"water_fnt_tme"</td>
 <td>the large flow of water</td>
 </tr>
 <tr>
-<td>&quot;water_fountain&quot;</td>
+<td>"water_fountain"</td>
 <td>water of a fountain</td>
 </tr>
 <tr>
-<td>&quot;wallbust&quot;</td>
+<td>"wallbust"</td>
 <td>a disappearing heap pair</td>
 </tr>
 <tr>
-<td>&quot;WS_factorysmoke&quot;</td>
+<td>"WS_factorysmoke"</td>
 <td>smoke</td>
 </tr>
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
