--- a/en/scm-documentation/sa/stats.html
+++ b/en/scm-documentation/sa/stats.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Statistics ID</title>
@@ -1246,4 +1246,4 @@
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
