--- a/en/scm-documentation/sa/vehicle-variations.html
+++ b/en/scm-documentation/sa/vehicle-variations.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Vehicle Variations</title>
@@ -436,4 +436,4 @@ Variant `-1` is the default model with no extras. Variants `0` through `5` are p
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
