--- a/en/version-history.html
+++ b/en/version-history.html
@@ -507,4 +507,4 @@ The class member `Car.SetSpeedInstantly` was named incorrectly (with a wrong opc
 * compilation of text sources into `main.scm` and `script.img`
 * basic features for text editing
 
-<script src="../js/markdown.js"></script>
+<script src="../js/main.min.js"></script>
