--- a/en/README.html
+++ b/en/README.html
@@ -10,17 +10,17 @@
 <body>
 
 **Sanny Builder** is a fast and powerful tool designed for the GTA 3D game series (GTA3, VC, SA, LCS; partially VCS).
-.
-It includes a disassembler, permitting the end-user to transform the game scripts into text. The compiler feature offers a convenient editor with a large number of [useful functions](editor/features.html) such as syntax highlighting, error checking, advanced search tools, player coordinates reading, fast movement through code and much more.
-.
-Sanny offers an advanced code syntax which is similar to existing programming languages. This syntax includes changeable [classes](coding/classes.html), [keywords](coding/keywords.html) and high-level statements. We recommend you continue reading and fully explore the documentation to learn more about SB and its capabilities. We provide a wealth of information that will help you get started in mission coding.
+
+It includes a disassembler, permitting the end-user to transform the game scripts into text. The compiler feature offers a convenient editor with a large number of [useful functions](editor/features.md) such as syntax highlighting, error checking, advanced search tools, player coordinates reading, fast movement through code and much more.
+
+Sanny offers an advanced code syntax which is similar to existing programming languages. This syntax includes changeable [classes](coding/classes.md), [keywords](coding/keywords.md) and high-level statements. We recommend you continue reading and fully explore the documentation to learn more about SB and its capabilities. We provide a wealth of information that will help you get started in mission coding.
 
 ## Installation and Updates
 
-Run the installer and follow its instructions. During installation you could optionally select the game directory you plan to work with, associate files with the  `.scm` extension with Sanny Builder and install the [CLEO library](https://cleo.li/).  You can always update these settings in the [program options](editor/options.html).
-.
+Run the installer and follow its instructions. During installation you could optionally select the game directory you plan to work with, associate files with the  `.scm` extension with Sanny Builder and install the [CLEO library](https://cleo.li/).  You can always update these settings in the [program options](editor/options/README.md).
+
 To uninstall the program, run the file `unins000.exe` located in its root folder.
-.
+
 Latest versions and updates are always available on [sannybuilder.com](https://sannybuilder.com)
 
 ## Contacts
@@ -29,11 +29,11 @@ Latest versions and updates are always available on [sannybuilder.com](https://s
 [Sanny Builder @ Twitter](https://twitter.com/SannyBuilderDev)\
 [Sanny Builder @ Facebook](https://facebook.com/SannyBuilder)\
 [Sanny Builder @ GTAForums.com](http://gtaforums.com/index.php?showtopic=211077)
-.
+
 For any questions e-mail me at [mail@sannybuilder.com](mailto:mail@sannybuilder.com) or create a ticket on [GitHub](https://github.com/sannybuilder/dev/issues).
-.
+
 Use responsibly at your own risk. In Backup We Trust.
 .
 &copy; 2005-2021 Seemann
 
-<script src="../js/markdown.js"></script>
+<script src="../js/main.min.js"></script>
