--- a/en/coding/comments.html
+++ b/en/coding/comments.html
@@ -25,4 +25,4 @@ Since version 3.06 Sanny Builder also supports the C++-like comments `/* */`.
 
 To comment out or uncomment multiple selected lines of the code press `Ctrl+Q` (this hotkey is configurable in the [options](../editor/options/hotkeys.md)).
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
