--- a/en/coding/conditions.html
+++ b/en/coding/conditions.html
@@ -12,15 +12,14 @@
 The `IF` operator evaluates one or more conditions and creates a new branch of code.
 
 ## Low-level IF statements
-```sb3
-00d6: if &lt;N&gt;
-    &lt;condition 1&gt;
-    &lt;condition 2&gt;
-    ...
-    &lt;condition N+1&gt;
-004D: jump_if_false &lt;label&gt;
-```
 
+`00d6: if <N>`\
+`<condition 1>`\
+`<condition 2>`\
+`...`\
+`<condition N+1>`\
+`004D: jump_if_false <label>`\
+\
 `N` means the total number of conditions within the IF statement and the way the evaluation of conditions happens. 
 
 <table>
@@ -58,8 +57,8 @@ A single IF statement can contain up to 8 conditions.
 Sanny Builder allows to omit  `0` after `IF. IF 0` and  `IF` are equivalent.
 {% endhint %}
 
-- `&lt;label&gt;`- a name of the [label](data-types.md#labels) where script jumps if the IF statement is false.
-- `&lt;condition&gt;` - any conditional opcode evaluating to `true` or `false` 
+- `<label>`- a name of the [label](data-types.md#labels) where script jumps if the IF statement is false.
+- `<condition>` - any conditional opcode evaluating to `true` or `false` 
 
 If you have the  `Conditions check` enabled in the [options](../editor/options/general.md#check-conditions), you can replace the if number with the keywords `AND` or `OR`. The compiler calculates the correct value itself.
 
@@ -79,30 +78,28 @@ The compiler writes the number `1` instead of `and`.
 
 ## High-level Constructs
 
-To make writing conditions easier there are high-level constructs that don't require any additional labels:
-```sb3
-IF &lt;N&gt;/AND/OR
-  &lt;condition 1&gt;
-  &lt;condition 2&gt;
-  ...
-  &lt;condition N+1&gt;
-THEN
-  &lt;commands if the statement is true&gt;
-END
-```
-```sb3
-IF &lt;N&gt;/AND/OR
-  &lt;condition 1&gt;
-  &lt;condition 2&gt;
-  ...
-  &lt;condition N+1&gt;
-THEN
-  &lt;commands if the statement is true&gt;
-ELSE\
-  &lt;commands if the statement is false&gt;
-END
-```
+To make writing conditions easier there are high-level constructs that don't require any additional labels:\
+`IF <N>/AND/OR`\
+`  <condition 1>`\
+`  <condition 2>`\
+`  ...`\
+`  <condition N+1>`\
+`THEN`\
+`  <commands if the statement is true>`\
+`END`
+<br><br>
+`IF <N>/AND/OR`\
+`  <condition 1>`\
+`  <condition 2>`\
+`  ...`\
+`  <condition N+1>`\
+`THEN`\
+`  <commands if the statement is true>`\
+`ELSE`\
+`  <commands if the statement is false>`\
+`END`
 
+.
 A condition is created by the rules described for [low-level conditions](conditions.md#low-level-if-statements). After `THEN` you have to specify the command(-s) that are executed if the condition is met. After `ELSE` you have to specify the command(-s) that are executed if the condition is not met.
 
 The `IF` statement is closed with the word `END`.
@@ -135,4 +132,4 @@ Nested IF statements are supported.
 
 `a` and `b` are operands. The compiler is able to figure out an opcode if one of the operands is a number or a [string literal](data-types.md#string-literals), or both [variable' type](variables.md#var-end-construct) is known.
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
