--- a/en/credits.html
+++ b/en/credits.html
@@ -12,7 +12,7 @@
 ## Contributors
 
 **Sanny Builder** is made and produced by [Seemann](https://github.com/x87) with the contributions from the best people from around the globe:
-.
+
 Alexander Blade, Barton Waterduck, BG_ASM, Capushon, CyQ, Demarest, JernejL, Hammer83, koPPP, listener, Midnightz, OrionSR, pdescobar, PLPynton, San'OK, Sergey81, spaceeinstein, Silent, wmysterio, XMDS, Y_Less, ZAZ, and many others.
 
 **Special thanks to yelmi and Xieon for their support.**
@@ -32,4 +32,4 @@ SynEdit © SynEdit Team\
 Inno Setup © Jordan Russell, Martijn Laan\
 [https://jrsoftware.org/isinfo.php](https://jrsoftware.org/isinfo.php)
 
-<script src="../js/markdown.js"></script>
+<script src="../js/main.min.js"></script>
