--- a/en/editor/cli.html
+++ b/en/editor/cli.html
@@ -267,4 +267,4 @@ Shortcut: `-o`
 sanny.exe -o Compiler::CheckConditions 0 -o Editor::LanguageService 1
 ```
 
-<script src="../../js/markdown.js"></script>
+<script src="../../js/main.min.js"></script>
