--- a/en/editor/edit-modes/extensions.html
+++ b/en/editor/edit-modes/extensions.html
@@ -95,4 +95,4 @@ Sanny Builder ships some common and recognized extensions for different edit mod
 
 Using opcodes from the third-party libraries not listed there is possible, the compiler will not require the `{$USE}` directive.
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
