--- a/en/editor/options/hotkeys.html
+++ b/en/editor/options/hotkeys.html
@@ -13,4 +13,4 @@
 
 Some [hotkeys](../hotkeys.md) are customizable for your comfort. You may set up new keyboard shortcuts for the IDE tools, editor actions and some other features.
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
