--- a/en/scm-documentation/gta3/radar-icons.html
+++ b/en/scm-documentation/gta3/radar-icons.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Radar Icons</title>
@@ -130,4 +130,4 @@
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
