--- a/en/scm-documentation/lcs/clothes.html
+++ b/en/scm-documentation/lcs/clothes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Player Clothes</title>
@@ -88,4 +88,4 @@
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
