--- a/en/scm-documentation/lcs/weapons.html
+++ b/en/scm-documentation/lcs/weapons.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Weapon IDs</title>
@@ -210,4 +210,4 @@
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
