--- a/en/scm-documentation/sa/gangs.html
+++ b/en/scm-documentation/sa/gangs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Gang IDs</title>
@@ -64,4 +64,4 @@
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
