--- a/en/scm-documentation/sa/interiors.html
+++ b/en/scm-documentation/sa/interiors.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Interiors</title>
@@ -718,4 +718,4 @@
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
