--- a/en/scm-documentation/sa/player-body-parts.html
+++ b/en/scm-documentation/sa/player-body-parts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Player Body Parts</title>
@@ -23,7 +23,7 @@
 <tbody>
 <tr>
 <td>0</td>
-<td>[Torso](clothes.html#torso)</td>
+<td>[Torso](clothes.md#torso)</td>
 </tr>
 <tr>
 <td>1</td>
@@ -31,11 +31,11 @@
 </tr>
 <tr>
 <td>2</td>
-<td>[Legs](clothes.html#legs)</td>
+<td>[Legs](clothes.md#legs)</td>
 </tr>
 <tr>
 <td>3</td>
-<td>[Shoes](clothes.html#legs)</td>
+<td>[Shoes](clothes.md#legs)</td>
 </tr>
 <tr>
 <td>4</td>
@@ -75,25 +75,25 @@
 </tr>
 <tr>
 <td>13</td>
-<td>[Necklace](clothes.html#necklaces)</td>
+<td>[Necklace](clothes.md#necklaces)</td>
 </tr>
 <tr>
 <td>14</td>
-<td>[Bracelet/Watch](clothes.html#watches)</td>
+<td>[Bracelet/Watch](clothes.md#watches)</td>
 </tr>
 <tr>
 <td>15</td>
-<td>[Glasses](clothes.html#glasses)</td>
+<td>[Glasses](clothes.md#glasses)</td>
 </tr>
 <tr>
 <td>16</td>
-<td>[Hats](clothes.html#hats)</td>
+<td>[Hats](clothes.md#hats)</td>
 </tr>
 <tr>
 <td>17</td>
-<td>[Special clothes as Valet, Gimp suit](clothes.html#special)</td>
+<td>[Special clothes as Valet, Gimp suit](clothes.md#special)</td>
 </tr>
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
