--- a/en/scm-documentation/sa/tattoos.html
+++ b/en/scm-documentation/sa/tattoos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Tattoos</title>
@@ -20,7 +20,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -55,7 +55,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -97,7 +97,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -139,7 +139,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -181,7 +181,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -244,7 +244,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -300,7 +300,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -363,7 +363,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -426,7 +426,7 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 <tr>
 <th>Texture</th>
 <th>Model</th>
-<th><a href="player-body-parts.html">Body Part</a></th>
+<th><a href="player-body-parts.md">Body Part</a></th>
 <th>Tattoo Name</th>
 <th>Image</th>
 </tr>
@@ -477,4 +477,4 @@ Player.SetClothes($PLAYER_CHAR, &lt;texture&gt;, &lt;model&gt;, &lt;body part&gt
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
