--- a/en/scm-documentation/sa/trains.html
+++ b/en/scm-documentation/sa/trains.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Train Types</title>
@@ -127,4 +127,4 @@
 </tbody>
 </table>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
