--- a/en/scm-documentation/sa/weapons.html
+++ b/en/scm-documentation/sa/weapons.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Weapon IDs</title>
@@ -414,4 +414,4 @@ td:nth-child(2),td:nth-child(3),td:nth-child(4){
 </tbody>
 </TABLE>
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
