--- a/en/scm-documentation/vc/garages.html
+++ b/en/scm-documentation/vc/garages.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html cd=3>
 <head>
   <title>Garage IDs</title>
@@ -183,4 +183,4 @@
 
 [https://gtamods.com/wiki/Garage#Vice_City](https://gtamods.com/wiki/Garage#Vice_City)
 
-<script src="../../../js/markdown.js"></script>
+<script src="../../../js/main.min.js"></script>
