--- a/en/editor/features.html
+++ b/en/editor/features.html
@@ -89,14 +89,14 @@ Say, you need to exchange the actor's handles in each pair (i.e have `$ActorWith
 
 Place the cursor in the first line before `$Actor` and press `Ctrl+M`. The editor immediately begins recording all keys - so be careful!
 
-_ Press and hold `Ctrl` and press the `Right Arrow` button once 
-_ Press `Shift+Home` and `Ctrl+Ins`.
-_ Press the `Down Arrow` button. The cursor must be on the second line with the global variable in the clipboard
-_ Press `Ctrl+Right Arrow` and `Shift+Ins`.
-_ Press `Ctrl+Left Arrow`, `Shift+Home`, `Ctrl+Ins` and `Delete`
-_ Press the `Up Arrow` button
-_ Press `Ctrl+Shift+Right Arrow` and `Shift+Ins`
-_ Press the `Home` button.
+1. Press and hold `Ctrl` and press the `Right Arrow` button once 
+2. Press `Shift+Home` and `Ctrl+Ins`.
+3. Press the `Down Arrow` button. The cursor must be on the second line with the global variable in the clipboard
+4. Press `Ctrl+Right Arrow` and `Shift+Ins`.
+5. Press `Ctrl+Left Arrow`, `Shift+Home`, `Ctrl+Ins` and `Delete`
+6. Press the `Up Arrow` button
+7. Press `Ctrl+Shift+Right Arrow` and `Shift+Ins`
+8. Press the `Home` button.
 
 Now the first two lines should look like these:
 
