Fixed: CSS & JS

--- a/en/coding/variables.html
+++ b/en/coding/variables.html
@@ -13,8 +13,9 @@ A **variable (var)** is a named storage location that contains a value and can b
 
 ## Global variables
 
-A global variable starts with `$` followed by an identifier (name).  The global variable name is any combination of letters, digits and `_`:
-
+A global variable starts with `$` followed by an identifier (name).\
+The global variable name is any combination of letters, digits and `_`:\
+\
 `$variable1 $100 $____`
 
 {% hint style="info" %}
