--- a/en/scm-documentation/sa/weather.html
+++ b/en/scm-documentation/sa/weather.html
@@ -13,149 +13,174 @@
 01b6: set_weather &lt;id&gt;
 ```
 
+
+#### Los Santos
+
 <table>
 <thead>
 <tr>
 <th>ID</th>
 <th>Description</th>
-<th>Location</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>0</td>
 <td>Extra Sunny</td>
-<td>Los Santos</td>
 </tr>
 <tr>
 <td>1</td>
 <td>Sunny</td>
-<td>Los Santos</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Extra Sunny Smog</td>
-<td>Los Santos</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Sunny Smog</td>
-<td>Los Santos</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Cloudy</td>
-<td>Los Santos</td>
 </tr>
+</tbody>
+</table>
+
+#### San Fierro
+
+<table>
+<thead>
 <tr>
-<td></td>
-<td></td>
-<td></td>
+<th>ID</th>
+<th>Description</th>
 </tr>
+</thead>
+<tbody>
+<tbody>
 <tr>
 <td>5</td>
 <td>Sunny</td>
-<td>San Fierro</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Extra Sunny</td>
-<td>San Fierro</td>
 </tr>
 <tr>
 <td>7</td>
 <td>Cloudy</td>
-<td>San Fierro</td>
 </tr>
 <tr>
 <td>8</td>
 <td>Rainy</td>
-<td>San Fierro</td>
 </tr>
 <tr>
 <td>9</td>
 <td>Foggy</td>
-<td>San Fierro</td>
 </tr>
+</tbody>
+</table>
+
+#### Las Venturas
+
+<table>
+<thead>
 <tr>
-<td></td>
-<td></td>
-<td></td>
+<th>ID</th>
+<th>Description</th>
 </tr>
+</thead>
+<tbody>
+<tbody>
 <tr>
 <td>10</td>
 <td>Sunny</td>
-<td>Las Venturas</td>
 </tr>
 <tr>
 <td>11</td>
 <td>Extra Sunny</td>
-<td>Las Venturas</td>
 </tr>
 <tr>
 <td>12</td>
 <td>Cloudy</td>
-<td>Las Venturas</td>
 </tr>
+</tbody>
+</table>
+
+#### Countryside
+
+<table>
+<thead>
 <tr>
-<td></td>
-<td></td>
-<td></td>
+<th>ID</th>
+<th>Description</th>
 </tr>
+</thead>
+<tbody>
+<tbody>
 <tr>
 <td>13</td>
 <td>Extra Sunny</td>
-<td>Countryside</td>
 </tr>
 <tr>
 <td>14</td>
 <td>Sunny</td>
-<td>Countryside</td>
 </tr>
 <tr>
 <td>15</td>
 <td>Cloudy</td>
-<td>Countryside</td>
 </tr>
 <tr>
 <td>16</td>
 <td>Rainy</td>
-<td>Countryside</td>
 </tr>
+</tbody>
+</table>
+
+#### Desert
+
+<table>
+<thead>
 <tr>
-<td></td>
-<td></td>
-<td></td>
+<th>ID</th>
+<th>Description</th>
 </tr>
+</thead>
+<tbody>
+<tbody>
 <tr>
 <td>17</td>
 <td>Extra Sunny</td>
-<td>Desert</td>
 </tr>
 <tr>
 <td>18</td>
 <td>Sunny</td>
-<td>Desert</td>
 </tr>
 <tr>
 <td>19</td>
 <td>Sandstorm</td>
-<td>Desert</td>
 </tr>
+</tbody>
+</table>
+
+#### Special
+
+<table>
+<thead>
 <tr>
-<td></td>
-<td></td>
-<td></td>
+<th>ID</th>
+<th>Description</th>
 </tr>
+</thead>
+<tbody>
+<tbody>
 <tr>
 <td>20</td>
 <td>Underwater</td>
-<td></td>
 </tr>
 <tr>
 <td>21</td>
 <td>Extracolours 1</td>
-<td></td>
 </tr>
 <tr>
 <td>22</td>
