--- a/en/coding/comments.html
+++ b/en/coding/comments.html
@@ -11,6 +11,11 @@
 
 Comments start with the double slash `//`. Everything after `//` to the end of the line is ignored by the compiler.
 
+```sb3
+// comments here
+0001: wait 0 ms
+```
+
 To comment out multiple lines or a part of the line, use block comments `{}`:
 
 ```sb3
@@ -20,7 +25,12 @@ To comment out multiple lines or a part of the line, use block comments `{}`:
 Since version 3.06 Sanny Builder also supports the C++-like comments `/* */`.
 
 ```sb3
-0001: wait /* comments here */ 0 ms
+0000: nop
+/*
+   comments
+     here
+*/
+0001: wait 0 ms
 ```
 
 To comment out or uncomment multiple selected lines of the code press `Ctrl+Q` (this hotkey is configurable in the [options](../editor/options/hotkeys.md)).
