--- a/en/scm-documentation/vc/garages.html
+++ b/en/scm-documentation/vc/garages.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html cd=3>
+<html>
 <head>
   <title>Garage IDs</title>
   <meta charset="utf-8">
@@ -8,7 +8,6 @@
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
----
 <table>
 <thead>
 <tr>
